Add reload and duels subcommands to /ls command (#22)